...
) {
    DASHBOARD(
        graphRoute = RootGraph.Dashboard.route,
        rootRoute = AppRoute.HOME,
        icon = FoxholeIcons.Dashboard,
        titleRes = R.string.dashboard,
        testTag = "bottom_nav_dashboard",
    ),
    SETTINGS(
        graphRoute = RootGraph.Settings.route,
        rootRoute = AppRoute.SETTINGS,
        icon = FoxholeIcons.Settings,
        titleRes = R.string.settings,
        testTag = "bottom_nav_settings",
    ),
}

@Suppress("LongMethod", "CyclomaticComplexMethod")
@Composable
fun FoxholeApp(
...
